feat: implement endpoint analysis service and foundational infrastructure for agent task management